--- a/kocom.yaml
+++ b/kocom.yaml
@@ -7,7 +7,7 @@ uart:
   tx_pin: GPIO02
 
 external_components:
-  - source: github://teia1397-prog/espcomponents@latest
+  - source: github://teia1397-prog/espcomponents@main
     components: [ uartex ]
     refresh: always  
     
