--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1094,6 +1094,64 @@ climate:
             - "x.current_temperature"
             - 'x.preset == CLIMATE_PRESET_AWAY ? "외출" : "일반"'
 
+  # 알파룸 난방 - 프리셋 모드로만 제어 (전원 버튼 없음)
+  - platform: uartex
+    name: "Alpha room Heater"
+    id: Alpha_room_heater
+    visual:
+      min_temperature: 10 °C
+      max_temperature: 30 °C
+      temperature_step: 1 °C
+    state:
+      data: [0x30, 0xd0, 0x00, 0x36, 0x04]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_temperature_current:
+      offset: 12
+      length: 1
+      precision: 0
+    state_temperature_target:
+      offset: 10
+      length: 1
+      precision: 0
+    state_heat:
+      offset: 8
+      data: [0x11] # 난방 상태 (0x11만 체크)
+    state_off:
+      offset: 8
+      data: [0x00] # 꺼진 상태
+    state_preset_away:
+      offset: 9
+      data: [0x01]
+    state_preset_none:
+      offset: 9
+      data: [0x00]
+    command_heat: !lambda |-
+      uint8_t target = id(Alpha_room_heater).target_temperature;
+      uint8_t preset = id(master_bedroom_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x00, 0x11, preset, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_preset_none: !lambda |-
+      uint8_t target = id(Alpha_room_heater).target_temperature;
+      return {{0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x00, 0x11, 0x00, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_preset_away: !lambda |-
+      uint8_t target = id(Alpha_room_heater).target_temperature;
+      return {{0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x00, 0x11, 0x01, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    command_temperature: !lambda |-
+      uint8_t target = x;
+      uint8_t preset = id(Alpha_room_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
+      return {{0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x00, 0x11, preset, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
+    on_state:
+      - logger.log:
+          format: "안방 보일러 상태 변경: 모드=%s, 목표온도=%.0f°C, 현재온도=%.0f°C, 프리셋=%s"
+          args:
+            - 'x.mode == CLIMATE_MODE_HEAT ? "난방" : x.mode == CLIMATE_MODE_OFF ? "꺼짐" : "알수없음"'
+            - "x.target_temperature"
+            - "x.current_temperature"
+            - 'x.preset == CLIMATE_PRESET_AWAY ? "외출" : "일반"'
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x36, 0x04, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+
 binary_sensor:
   # 현관 초인종 감지 (다양한 패턴 시도)
   - platform: uartex
