--- a/kocom.yaml
+++ b/kocom.yaml
@@ -263,7 +263,12 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-
+      
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x04, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+    
   # 거실화장실 조명 1 (Room 5)
   - platform: uartex
     name: "Guest Bathroom Light 1"
