--- a/kocom.yaml
+++ b/kocom.yaml
@@ -119,10 +119,10 @@ light:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
 
-  # 안방화장실 조명 1 (Room 2)
+  # 세나방 (Room 2)
   - platform: uartex
-    name: "Master Bathroom Light 1"
-    id: master_bathroom_light_1
+    name: "Room 2 Light"
+    id: room_2_light
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -1048,10 +1048,10 @@ climate:
             - "x.current_temperature"
             - 'x.preset == CLIMATE_PRESET_AWAY ? "외출" : "일반"'
 
-  # 연우방 난방 (Room 2) - 프리셋 모드로만 제어 (전원 버튼 없음)
+  # 세나방 난방 (Room 2) - 프리셋 모드로만 제어 (전원 버튼 없음)
   - platform: uartex
-    name: "Room 1 Heater"
-    id: room1_heater
+    name: "Room 2 Heater"
+    id: room2_heater
     visual:
       min_temperature: 10 °C
       max_temperature: 30 °C
@@ -1080,27 +1080,31 @@ climate:
       offset: 9
       data: [0x00]
     command_heat: !lambda |-
-      uint8_t target = id(room1_heater).target_temperature;
-      uint8_t preset = id(room1_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
+      uint8_t target = id(room2_heater).target_temperature;
+      uint8_t preset = id(room2_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
       return {{0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x00, 0x11, preset, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_preset_none: !lambda |-
-      uint8_t target = id(room1_heater).target_temperature;
+      uint8_t target = id(room2_heater).target_temperature;
       return {{0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x00, 0x11, 0x00, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_preset_away: !lambda |-
-      uint8_t target = id(room1_heater).target_temperature;
+      uint8_t target = id(room2_heater).target_temperature;
       return {{0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x00, 0x11, 0x01, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     command_temperature: !lambda |-
       uint8_t target = x;
-      uint8_t preset = id(room1_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
+      uint8_t preset = id(room2_heater).preset == climate::CLIMATE_PRESET_AWAY ? 0x01 : 0x00;
       return {{0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x00, 0x11, preset, target, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     on_state:
       - logger.log:
-          format: "연우방 보일러 상태 변경: 모드=%s, 목표온도=%.0f°C, 현재온도=%.0f°C, 프리셋=%s"
+          format: "세나나방 보일러 상태 변경: 모드=%s, 목표온도=%.0f°C, 현재온도=%.0f°C, 프리셋=%s"
           args:
             - 'x.mode == CLIMATE_MODE_HEAT ? "난방" : x.mode == CLIMATE_MODE_OFF ? "꺼짐" : "알수없음"'
             - "x.target_temperature"
             - "x.current_temperature"
             - 'x.preset == CLIMATE_PRESET_AWAY ? "외출" : "일반"'
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x36, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 알파룸 난방 - 프리셋 모드로만 제어 (전원 버튼 없음)
   - platform: uartex
