--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1191,7 +1191,7 @@ binary_sensor:
     device_class: door
     state:
       data: [0x30, 0xd0, 0x00, 0x60, 0x00] # 상태 조회 패턴
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+      mask: [0xff, 0xff, 0xff, 0xff, 0xff]
     state_on:
       offset: 8
       data: [0x01] # 문 열림 (값 반전)
