--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1173,6 +1173,7 @@ binary_sensor:
     state:
       data: [0x30, 0xbc, 0x00, 0x60, 0x00] # 모션/도어벨 디바이스
       mask: [0xff, 0xff, 0xff, 0xff, 0xff]
+      len: 21
     state_on:
       offset: 8
       data: [0x01]
