--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1216,6 +1216,7 @@ binary_sensor:
       data: [0x03]
     # state_off를 삭제하는 대신, 5초 뒤에 자동으로 꺼지게 설정
     filters:
+      - throttle: 10s
       - delayed_off: 5s
     on_press:
       - logger.log: "🛗 엘리베이터가 도착했습니다!"
@@ -1280,9 +1281,28 @@ text_sensor:
 #오전 2:21:58 - 2초 후
 #ESP Kocom Log [R]AA55 30 BC 00 44 00 01 00 00 03 0000000000000034 0D0D(21)로 변경되었습니다.
 #오전 2:21:57 - 2초 후
-
+#--------
+#도착 다시 시도 2번째 패킷
+#도착 패킷
+#ESP Kocom Log [R]AA55 30 BE 00 44 00 01 00 01 03 00000000000000370D0D(21)로 변경되었습니다.
+#오전 2:41:39 - 2초 후
+#ESP Kocom Log [R]AA55 30 BD 00 44 00 01 00 01 03 00000000000000360D0D(21)로 변경되었습니다.
+#오전 2:41:39 - 2초 후
+#ESP Kocom Log [R]AA55 30 BC 00 44 00 01 00 01 03 00000000000000350D0D(21)로 변경되었습니다.<-도착?
+#오전 2:41:38 - 2초 후
+#ESP Kocom Log [R]AA55 30 BE 00 44 00 01 00 00 03 00000000000000360D0D(21)로 변경되었습니다.
+#오전 2:41:38 - 2초 후
+#ESP Kocom Log [R]AA55 30 BD 00 44 00 01 00 00 03 0000000000000350D0D(21)로 변경되었습니다.
+#오전 2:41:38 - 2초 후
+#ESP Kocom Log [R]AA55 30 BC 00 44 00 01 00 00 03 00000000000000340D0D(21)로 변경되었습니다.
+#오전 2:41:37 - 2초 후
+#-----------
 #--아래는 전송 신호
 #ESP Kocom Log [R]AA55 30 DC 00 44 00 01 00 01 03 00000000000000550D0D(21)로 변경되었습니다.
 #오전 2:21:23 - 2초 후
 #ESP Kocom Log [W]AA55 30 BC 00 01 00 44 00 01 03 00000000000000350D0D(21)로 변경되었습니다.
 #오전 2:21:22 - 2초 후
+
+#글 참고 도착 패킷
+#AA55 30 BC 00 44 00 01 00 01 03 00 00 00 00 00 00 00 35 0D 0D 
+#[출처] 구코콤 엘리베이터 호출 및 층수 디스플레이 추가 성공기(part 1) (HomeAssistant) | 작성자 꼬르륵
