Add elevator arrival sensor and update logging

--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1203,22 +1203,23 @@ binary_sensor:
     on_release:
       - logger.log: "🚪 현관문이 닫혔습니다!"
 
-uartex:
-  on_data:
-    # 9번째 칸(Index 8) 자리에 0x03을 직접 넣었습니다.
-    # [0]   [1]   [2]   [3]   [4]   [5]   [6]   [7]   [8]
-    # 30    B0    00    44    00    01    00    00    03
-    - data: [0x30, 0xB0, 0x00, 0x44, 0x00, 0x01, 0x00, 0x00, 0x03]
-      mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0xFF]
-      then:
-        - script.execute: elevator_timer
-
+# 1. 화면에 표시될 센서 (가상 센서)
 binary_sensor:
   - platform: template
     name: "Elevator Arrive"
     id: elevator_status
     device_class: motion
 
+# 2. 패킷을 감시해서 스크립트 실행
+uartex:
+  on_data:
+    # Index 8 자리에 0x03이 있는지 직접 검사 (offset 8 역할)
+    - data: [0x30, 0xB0, 0x00, 0x44, 0x00, 0x01, 0x00, 0x00, 0x03]
+      mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0xFF]
+      then:
+        - script.execute: elevator_timer
+
+# 3. 5초 타이머 로직 (여기서 강제 OFF를 수행)
 script:
   - id: elevator_timer
     mode: restart
@@ -1226,7 +1227,7 @@ script:
       - binary_sensor.template.publish:
           id: elevator_status
           state: ON
-      - logger.log: "🛗 엘리베이터가 도착했습니다! (상태값: 03)"
+      - logger.log: "🛗 엘리베이터 도착 감지 (03)"
       - delay: 5s
       - binary_sensor.template.publish:
           id: elevator_status
