--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1209,14 +1209,9 @@ binary_sensor:
     # device_class에 Elevator Arrive는 없으므로 generic이나 motion 추천
     device_class: motion 
     state:
-      data: [0x30, 0xb0, 0x00, 0x44, 0x00, 0x01, 0x00]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0x03]
-    # state_off를 삭제하는 대신, 5초 뒤에 자동으로 꺼지게 설정
+      data: [0x30, 0xB0, 0x00, 0x44, 0x00, 0x01, 0x00, 0x00, 0x03]
+      mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0xFF]
     filters:
-      - throttle: 10s
       - delayed_off: 5s
     on_press:
       - logger.log: "🛗 엘리베이터가 도착했습니다!"
