--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1211,8 +1211,8 @@ binary_sensor:
     # device_class에 Elevator Arrive는 없으므로 generic이나 motion 추천
     device_class: motion 
     state:
-      data: [0x30, 0xb0, 0x00, 0x44, 0x00, 0x01, 0x00, 0x01, 0x03]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff]
+      data: [0x30, 0xbc, 0x00, 0x44, 0x00, 0x01, 0x00, 0x01, 0x03]
+      mask: [0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff]
     filters:
       - delayed_off: 5s
     on_press:
