--- a/kocom.yaml
+++ b/kocom.yaml
@@ -138,6 +138,10 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 안방화장실 조명 2 (Room 2)
   - platform: uartex
@@ -179,10 +183,10 @@ light:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
 
-  # 아이방 조명 (Room 3)
+  # 사라방 조명 (Room 3)
   - platform: uartex
-    name: "Kids Room Light"
-    id: kids_room_light
+    name: "Room 3 Light"
+    id: room_3_light
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x03]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -198,6 +202,10 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x03, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 알파룸 (Room 4)
 # 전등 상태 확인과 제어용 패킷 설명
@@ -1047,6 +1055,10 @@ climate:
             - "x.target_temperature"
             - "x.current_temperature"
             - 'x.preset == CLIMATE_PRESET_AWAY ? "외출" : "일반"'
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x36, 0x03, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 세나방 난방 (Room 2) - 프리셋 모드로만 제어 (전원 버튼 없음)
   - platform: uartex
