--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1217,17 +1217,7 @@ binary_sensor:
     on_release:
       - logger.log: "🚪 현관문이 닫혔습니다!"
 
-button:
-  # 전원 공급선만 활성화 (조명은 켜지지 않음)
-  - platform: template
-    name: "Power Supply Activate"
-    icon: "mdi:power-plug"
-    on_press:
-      # 전원 공급선만 활성화 - Room ID를 0x00으로 변경하여 일괄소등 방지
-      - uartex.write:
-          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-          ack: [0x30, 0xdc]
-      - logger.log: "전원 공급선 활성화 (일괄소등 방지 적용)"
+
 
 
 #엘리베이터 도착했을때 나오는 패킷
@@ -1250,18 +1240,20 @@ binary_sensor:
     icon: mdi:elevator
     device_class: motion
     state:
-      data: [0x30, 0xB0, 0x00, 0x44, 0x00, 0x00, 0x00, 0x00, 0x03]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff, 0x00, 0x00, 0x00, 0xff]
+      # 30 BC 00 44 순서로 수정 (B0 -> BC)
+      data: [0x30, 0xBC, 0x00, 0x44, 0x00, 0x01, 0x00, 0x01, 0x03]
+      # 값이 변할 수 있는 부분(0x01 등)은 0x00으로 마스크 처리
+      mask: [0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0xFF]
     filters:
       - delayed_off: 5s
-    # on_press 대신 on_state 사용
     on_state:
       then:
         - if:
             condition:
-              binary_sensor.is_on: Elevator Arrive
+              binary_sensor.is_on: "Elevator Arrive"
             then:
               - logger.log: "🛗 엘리베이터가 도착했습니다!"
+
 
 
 button:
@@ -1273,6 +1265,16 @@ button:
       data: [0x30, 0xbc, 0x00, 0x01, 0x00, 0x44, 0x00, 0x01, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
       
+# 전원 공급선만 활성화 (조명은 켜지지 않음)
+  - platform: template
+    name: "Power Supply Activate"
+    icon: "mdi:power-plug"
+    on_press:
+      # 전원 공급선만 활성화 - Room ID를 0x00으로 변경하여 일괄소등 방지
+      - uartex.write:
+          data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x66, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+          ack: [0x30, 0xdc]
+      - logger.log: "전원 공급선 활성화 (일괄소등 방지 적용)"
 
       
 sensor:
@@ -1299,6 +1301,7 @@ text_sensor:
       if (check_value(8, 0x02, data, len)) return "상승";
       if (check_value(8, 0x03, data, len)) return "도착";
       return "Unknown";
+
 
 
 #엘리베이터 도착했을때 나오는 패킷
