kocom.yaml 업데이트

--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1240,10 +1240,10 @@ binary_sensor:
     icon: mdi:elevator
     device_class: motion
     state:
-      # 30 BC 00 44 순서로 수정 (B0 -> BC)
-      data: [0x30, 0xBC, 0x00, 0x44, 0x00, 0x01, 0x00, 0x01, 0x03]
-      # 값이 변할 수 있는 부분(0x01 등)은 0x00으로 마스크 처리
-      mask: [0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0xFF]
+      # 두 번째 값을 0xB0로 두고 마스크로 뒷자리(C,D,E)를 무시
+      data: [0x30, 0xB0, 0x00, 0x44, 0x00, 0x00, 0x00, 0x00, 0x03]
+      # 0xF0 마스크: 앞자리 'B'만 맞으면 통과 (BC, BD, BE 모두 허용)
+      mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0xFF]
     filters:
       - delayed_off: 5s
     on_state:
