--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1227,7 +1227,8 @@ binary_sensor:
       # 두 번째 바이트(BC~BE)는 무시(F0), 도착 상태값(8번째 01)은 정확히 체크(FF)
       mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF]
     on_press:
-      - logger.log: "🛗 엘리베이터가 도착했습니다!"
+      then:
+        - logger.log: "🛗 엘리베이터가 도착했습니다!"
 
 #엘리베이터 도착했을때 나오는 패킷
 #ESP Kocom Log [R]AA55 30 BE 00 44 00 01 00 01 03 0000000000000037 0D0D(21)로 변경되었습니다.
