--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1220,15 +1220,18 @@ binary_sensor:
   - platform: uartex
     name: "Elevator Arrive"
     icon: mdi:elevator
-    device_class: motion
+    device_class: door
     state:
-      # 로그의 30 BE 00 44 00 01 00 01 03 순서를 따름
-      data: [0x30, 0xBC, 0x00, 0x44, 0x00, 0x01, 0x00, 0x01, 0x03]
-      # 두 번째 바이트(BC~BE)는 무시(F0), 도착 상태값(8번째 01)은 정확히 체크(FF)
-      mask: [0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF]
+      data: [0x30, 0xBC, 0x00, 0x44, 0x00]
+      mask: [0xFF, 0xF0, 0xFF, 0xFF]
+    state_on:
+      offset: 8
+      data: [0x03]
     on_press:
       then:
-        - logger.log: "🛗 엘리베이터가 도착했습니다!"
+        - logger.log:
+            format: "🛗 엘리베이터가 도착했습니다!"
+            level: INFO # 로그 레벨을 INFO로 높여서 무조건 보이게 설정
 
 #엘리베이터 도착했을때 나오는 패킷
 #ESP Kocom Log [R]AA55 30 BE 00 44 00 01 00 01 03 0000000000000037 0D0D(21)로 변경되었습니다.
