--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1222,8 +1222,8 @@ binary_sensor:
     icon: mdi:elevator
     device_class: door
     state:
-      data: [0x30, 0xBC, 0x00, 0x44, 0x00]
-      mask: [0xFF, 0xF0, 0xFF, 0xFF]
+      data: [0x30, 0xb0, 0x00, 0x44, 0x00]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on:
       offset: 8
       data: [0x03]
