--- a/kocom.yaml
+++ b/kocom.yaml
@@ -1227,11 +1227,10 @@ binary_sensor:
     state_on:
       offset: 8
       data: [0x03]
-    on_press:
-      then:
-        - logger.log:
-            format: "🛗 엘리베이터가 도착했습니다!"
-            level: INFO # 로그 레벨을 INFO로 높여서 무조건 보이게 설정
+    filters:
+      - delayed_off: 5s  # 문제 1 해결: 5초 후 자동 닫힘
+    on_turn_on:          # 문제 2 해결: 상태 변경 시점에 실행
+      - logger.log: "🛗 엘리베이터가 도착했습니다!"
 
 #엘리베이터 도착했을때 나오는 패킷
 #ESP Kocom Log [R]AA55 30 BE 00 44 00 01 00 01 03 0000000000000037 0D0D(21)로 변경되었습니다.
